new index footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
 
       <footer>
-        Feito com <ion-icon name="heart"></ion-icon> pelo Jon
+        Feito pela a RocketSeat, configurado pelo Jon <ion-icon name="heart"></ion-icon>
       </footer>
     </div>
 
