--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@Jonnl</title>
+    <title>Meu portfólio</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="container">
       <div id="profile">
         <img src="./assets/avatar-jon.jpg" alt="Foto usada por Jonn" />
-        <p>@Jonnl</p>
+        <p>Júlio Batista</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -28,18 +28,14 @@
 
       <ul>
         <li>
-          <a href="https://github.com/juliobatistal" target="_blank">Github</a>
-        </li>
-
-        <li>
-          <a href="https://www.google.com.br/" target="_blank"
-            >Bone</a
+          <a href="https://discord.com/users/357204933109481475" target="_blank"
+            >Meu Discord</a
           >
         </li>
       </ul>
 
       <div id="social-links">
-        <a href="https://github.com/juliobatistal" target="_blank">
+        <a href="https://github.com/julioovj" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
@@ -53,7 +49,8 @@
       </div>
 
       <footer>
-        Feito pela a RocketSeat, configurado pelo Jon <ion-icon name="heart"></ion-icon>
+        Feito pela a RocketSeat, configurado pelo Jon
+        <ion-icon name="heart"></ion-icon>
       </footer>
     </div>
 
